fixed header spacing in list

--- a/react-pods/src/components/feedReader/FeedReader.css
+++ b/react-pods/src/components/feedReader/FeedReader.css
@@ -92,3 +92,7 @@ label{
   grid-template-columns: auto 4fr;
   gap: 1em;
 }
+
+.episode-pubDate{
+  margin: 0;
+}
